--- a/Jenkins/tasks/main.yml
+++ b/Jenkins/tasks/main.yml
@@ -1,23 +1,17 @@
 ---
-- hosts: all
-  become: yes
-  tasks:
-  - name: install packages
-    apt:
-     name: wget
-     state: present
-
   - name: install jenkins using wget
-    command: wget -q -O - https://pkg.jenkins.io/debian-stable/jenkins.io.key | sudo apt-key add -
+    shell: wget -q -O - https://pkg.jenkins.io/debian-stable/jenkins.io.key | sudo apt-key add -
 
   - name: append the packages
-    command: sudo sh -c 'echo deb http://pkg.jenkins.io/debian-stable binary/ > /etc/apt/sources.list.d/jenkins.list'
+    shell: sudo sh -c 'echo deb http://pkg.jenkins.io/debian-stable binary/ > /etc/apt/sources.list.d/jenkins.list'
 
-  - apt:
+  - name: update
+    apt:
      update_cache: yes
 
-  - apt:
-     name: jenkins
+  - name: install Jenkins
+    apt:
+     name: Jenkins
      state: present
 
 
