--- a/Lamp/tasks/main.yml
+++ b/Lamp/tasks/main.yml
@@ -1,2 +1,6 @@
 ---
 # tasks file for Lamp
+# Linux Apache Mangodb 
+- include_tasks: install apache.yml
+- include_tasks: install mysql.yml
+- include_tasks: install php.yml
