--- a/Jenkins/tasks/main.yml
+++ b/Jenkins/tasks/main.yml
@@ -1,9 +1,19 @@
 ---
+  - name: update
+    apt:
+     update_cache: yes
+
+  - name: install java
+    apt:
+     name: default-jdk 
+     state: present
+
   - name: install jenkins using wget
     shell: wget -q -O - https://pkg.jenkins.io/debian-stable/jenkins.io.key | sudo apt-key add -
 
   - name: append the packages
     shell: sudo sh -c 'echo deb http://pkg.jenkins.io/debian-stable binary/ > /etc/apt/sources.list.d/jenkins.list'
+
 
   - name: update
     apt:
@@ -11,8 +21,22 @@
 
   - name: install Jenkins
     apt:
-     name: Jenkins
+     name: jenkins
      state: present
+
+  - name: start service
+    service: 
+     name: jenkins
+     state: started
+
+  - name: get the password
+    shell: cat  /var/lib/jenkins/secrets/initialAdminPassword
+    register: result
+
+  - name: attach password
+    debug:
+     var: result.stdout
+
 
 
 
